fixes bug 222023 "regression: pref parser should accept single-quote delimited strings" r=timeless sr=brendan